# automated-invoice-error-correction

./: .gitignore  README.md  config.py  invoice.ipynb  pyproject.toml
app/: config.py  extraction.py  main.py  processing.py  prompt.py
